# misterstuff

./: .gitignore  .gitmodules  README.md
boards/: .gitignore  LICENSE  README.md  fp-info-cache  fp-lib-table  sym-lib-table
boards/bob/: bob-eagle-import.kicad_sym  bob.kicad_prl  bob.kicad_pro  sym-lib-table
boards/components/: 692112030100-fixed.kicad_mod  mouser.bak  mouser.kicad_sym
boards/components/692112030100/: 692112030100.epw  part_info.txt
boards/components/692122030100/: 692122030100.epw  (+1 more)
boards/flippity/: flippity.kicad_pcb  flippity.kicad_prl  flippity.kicad_pro  flippity.kicad_sch
boards/levelshifter/: fp-info-cache  fp-lib-table  levelshifter.kicad_pcb  levelshifter.kicad_prl  levelshifter.kicad_pro  levelshifter.kicad_sch  sym-lib-table
boards/mt32pipico/: .fj.swp  fp-info-cache  fp-lib-table  mt32pipico.dsn  mt32pipico.kicad_pcb  mt32pipico.kicad_prl  mt32pipico.kicad_pro  mt32pipico.kicad_sch  mt32pipico.rules  mt32pipico.sch  mt32pipico.ses  sym-lib-table
boards/simpleadapter/: #auto_saved_files#  fp-info-cache  fp-lib-table  simpleadapter.kicad_pcb  simpleadapter.kicad_pro  simpleadapter.kicad_sch  sym-lib-table
boards/simpleadapter14/: _autosave-simpleadapter14.kicad_pcb  fp-info-cache  simpleadapter14.kicad_prl  simpleadapter14.kicad_sch
boards/simpleadapter14f/: simpleadapter14f.kicad_pcb  simpleadapter14f.kicad_prl  simpleadapter14f.kicad_pro  simpleadapter14f.kicad_sch
boards/simpleadapter14m/: fp-lib-table  simpleadapter14m.kicad_pcb  simpleadapter14m.kicad_prl  simpleadapter14m.kicad_pro  simpleadapter14m.kicad_sch
boards/snaciechp/: #auto_saved_files#  snaciechp.kicad_prl  snaciechp.kicad_pro  snaciechp.kicad_sch
boards/straightusb3/: #auto_saved_files#  _autosave-straightusb3.kicad_sch  fp-lib-table  straightusb3.kicad_pcb  straightusb3.kicad_prl  straightusb3.kicad_pro  straightusb3.kicad_sch
boards/userioswitch/: fp-info-cache  sym-lib-table  userioswitch.kicad_pcb  userioswitch.kicad_prl  userioswitch.kicad_sch
boards/userioswitch14/: userioswitch14.kicad_pcb  userioswitch14.kicad_prl  userioswitch14.kicad_sch  userioswitch14.ses
boards/userioswitchhdr/: #auto_saved_files#  README.md  _autosave-userioswitchhdr.kicad_sch  userioswitchhdr-prev.kicad_sch  userioswitchhdr.kicad_pcb  userioswitchhdr.kicad_prl  userioswitchhdr.kicad_pro  userioswitchhdr.kicad_sch
misterpico/: CMakeLists.txt  decode.py  ep-decode.py  gdbinit  st-decode.py
misterpico/led/: led.py
misterpico/pico_i2c_slave-orig/: decode.py
misterpico/pico_i2c_slave-orig/example_mem/: CMakeLists.txt  example_mem.c
misterpico/pico_i2c_slave/i2c_slave/: i2c_slave.c
misterpico/src/: CMakeLists.txt  lwipopts.h  main.c  misterpico.c  tusb_config.h  tusb_lwip_glue.c  tusb_lwip_glue.h  usb_descriptors.c
misterpico/src/arch/: cc.h
openscad/: README.md  mitx-1.scad
powermgt/: .README.txt.swp  README.txt
(+276 files in other folders)
